Correctly present round trip options if some tains don't stop at the starting station. Also improve display of roundtrip opts on Firefox.

--- a/ticketbuilder.css
+++ b/ticketbuilder.css
@@ -657,3 +657,7 @@ border-radius: 0;
     font-style:italic !important;
     font-weight:bold !important;
 }
+
+.railticket_times_table td {
+    padding:0.15em !important;
+}
